tests/fixtures/errors/include_tag_source_local.puml
!startsub PRESENT_TAG
Alice -> Bob: local include block
!endsub
